src/tests/testfiles/function-calls/2.txt
testfiles/function-calls/2.c:6:5: error: expected 'int' but argument is of type 'char []'
f("c");
  ^
